--- a/demo/static/main.css
+++ b/demo/static/main.css
@@ -73,7 +73,7 @@ body {
   padding: 15px 25px 25px 15px;
   color:#eee;
   text-align: left;
-  font-family: "Helvetic Neue"
+  font-family: "Helvetica Neue"
   font-size: 12px;
   line-height: 18px;
 }
